Wed Jun 04 14:10:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/unittests/db_type_compat1.py:
	  If a database exists, but isn't a flint database, catch the
	  DatabaseOpeningError and try to open it anyway.  Add test for
	  this behaviour.

Wed Jun 04 14:08:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/testdata/chert_db/,
	  xappy/unittests/testdata/flint_db/: Add some empty databases in
	  chert and flint formats for testing.

Wed Jun 04 07:46:31 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/facet_hierarchy_1.py,
	  xappy/unittests/testdata/old_facet_db/: Fix bug in the backwards
	  compatibility code for facet hierarchies.  Add a database in the
	  old format, and a test which uses this to check the backwards
	  compatibility code.

Fri May 30 11:00:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/facet_hierarchy_1.py: Allow multiple parent
	  facets to be defined for each child.

Mon May 12 19:58:34 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation of the WEIGHT action.
	* xappy/fieldactions.py: Convert field values for WEIGHT fields to
	  float before storing them.

Mon May 12 18:32:14 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
	* xappy/fieldactions.py: Fix typo.
	* xappy/searchconnection.py: Add support for ranking search results
	  using weight fields. Also, add get_max_possible_weight(query) to
	  assist in balancing the weights returned by different query
	  components.
	* xappy/unittests/weight_action.py: Add test of "WEIGHT" action.

Mon May 12 13:16:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py,utils/make_xappy_tarballs,xappy/_checkxapian.py,